# AI-chatbot

./: .gitignore  AI-chatbot.code-workspace  README.md  api.py  explorations.ipynb  function_app.py  ingestion.py  md_to_text.py  pyproject.toml  requirements.txt
backend/: data_models.py  rag.py
frontend/: app.py
