[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.24.0",
    "fastapi>=0.124.2",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "langchain-community>=0.4.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.30.0",
    "pypdf>=6.4.1",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
